<?xml version="1.0"?>
<package format="2">
  <name>external_process_handler</name>
  <version>0.0.0</version>
  <description>The external_process_handler package</description>

  <maintainer email="jeyakaran@movel.ai"></maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
	<depend>movel_seirios_msgs</depend>
	<depend>pluginlib</depend>
	<depend>ros_utils</depend>
	<depend>roscpp</depend>
  <depend>std_msgs</depend>
	<depend>task_supervisor</depend>
  <depend>camera_lidar_docking_pallet</depend>

  <export>
	<task_supervisor plugin="${prefix}/external_process_handler_plugins.xml" />
  </export>
</package>
