<?xml version="1.0"?>
<package format="2">
  <name>fbsm</name>
  <version>1.0.0</version>
  <description>
      Feature based scan matcher
  </description>
  <maintainer email="contact@movel.ai">Movel AI</maintainer>
  <license>All rights reserved</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>cv_bridge</depend>
  <depend>geometry_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>
  <depend>ros_utils</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>eigen</depend>
  <depend>libpcl-all-dev</depend>

  <build_depend>message_generation</build_depend>
  <build_depend>cmake_modules</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
