<?xml version="1.0"?>
<package format="2">
  <name>hardware_status</name>
  <version>1.0.0</version>
  <description>The hardware_status package</description>
  <maintainer email="contact@movel.ai">Movel AI</maintainer>
  <license>All rights reserved</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>ros_utils</depend>
  <depend>movel_hasp_vendor</depend>
  <depend>movel_seirios_msgs</depend>
  <depend>topic_tools</depend>

  <test_depend>rosunit</test_depend>
</package>
